--- a/README.org
+++ b/README.org
@@ -621,8 +621,7 @@ audio2score は以下の *完全自動パイプライン* を提供します：
   # Features:
   # - pyenv Python 3.10 自動検出
   # - .venv 自動生成
-  # - README.org → src/*** 自動 '
-  tangle
+  # - README.org → src/*** 自動 tangle
   # - パッケージ自動インストール (pip install .)
   # - ffmpeg による音源 → WAV 変換（外部 WAV も常に正規化用に通す）
   # - audio2score CLI による Demucs+BasicPitch 自動実行
